# ParquetLoader

./: .gitignore  LICENSE  benckmark.py  pyproject.toml  readme.md  setup.py  table_io.py  test.py  test_table_io.py
benchmarks/: benchmark_asyncload.py  benckmark_streamload.py
parquet_loader/: __init__.py  dataloader.py  dataset.py  reader.py  shuffle.py  utils.py
tests/: test_associate.py  test_parallel.py  test_single.py
